# mediaart

./: .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml  sketch.js  state-store.js  style.css  tracking.js
config/: tracking.json
docs/: exhibition-decisions.md  local-operation.md  physical-object-tracking.md  tracking-experiment.md
src/mojihokori_tracking/: __init__.py  camera_probe.py  capture.py  config.py  protocol.py  server.py  sources.py  stabilizer.py  train.py
tests/js/: state-store.test.js  tracking.test.js
tests/python/: test_config.py  test_mock_source.py  test_stabilizer.py
